tests/baselines/reference/iteratorSpreadInArray6.errors.txt
tests/cases/conformance/es6/spread/iteratorSpreadInArray6.ts(15,14): error TS2345: Argument of type '[symbol]' is not assignable to parameter of type 'number | number[]'.
  Type '[symbol]' is not assignable to type 'number[]'.
    Types of property 'push' are incompatible.
      Type '(...items: symbol[]) => number' is not assignable to type '(...items: number[]) => number'.
        Types of parameters 'items' and 'items' are incompatible.
          Type 'number' is not assignable to type 'symbol'.


==== tests/cases/conformance/es6/spread/iteratorSpreadInArray6.ts (1 errors) ====
    class SymbolIterator {
        next() {
            return {
                value: Symbol(),
                done: false
            };
        }
    
        [Symbol.iterator]() {
            return this;
        }
    }
    
    var array: number[] = [0, 1];
    array.concat([...new SymbolIterator]);
                 ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '[symbol]' is not assignable to parameter of type 'number | number[]'.
!!! error TS2345:   Type '[symbol]' is not assignable to type 'number[]'.
!!! error TS2345:     Types of property 'push' are incompatible.
!!! error TS2345:       Type '(...items: symbol[]) => number' is not assignable to type '(...items: number[]) => number'.
!!! error TS2345:         Types of parameters 'items' and 'items' are incompatible.
!!! error TS2345:           Type 'number' is not assignable to type 'symbol'.